--- a/GenshinArtifactFarmer/GenshinValleyHome.xaml
+++ b/GenshinArtifactFarmer/GenshinValleyHome.xaml
@@ -10,35 +10,45 @@
 
     <Grid Margin = "10,0,10,10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="230" />
-            <ColumnDefinition />
+            <ColumnDefinition Width="1.5*" />
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height=".5*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
         <Grid.Background>
             <ImageBrush ImageSource="/images/InazumaBackground.jpg"/>
         </Grid.Background>
 
-        <Button Grid.Column="1" Grid.Row="1" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Right"> Register New Artifact</Button>
-        <Button Grid.Column="1" Grid.Row="2" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Right" Click="Register_New_Character_Button"> Register New Character</Button>
-        <Button Grid.Column="1" Grid.Row="3" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Right"> View Artifact Inventory</Button>
-        <Button Grid.Column="1" Grid.Row="4" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Right" Click="Import_Artifacts_Button">Import Artifacts</Button>
+        <Button Grid.Column="2" Grid.Row="2" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Center">Register New Artifact</Button>
+        <Button Grid.Column="2" Grid.Row="3" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Center" Click="Register_New_Character_Button">Register New Character</Button>
+        <Button Grid.Column="2" Grid.Row="4" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Center">View Artifact Inventory</Button>
+        <Button Grid.Column="2" Grid.Row="5" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Center" Click="Import_Artifacts_Button">Import Artifacts</Button>
 
-        <Label Grid.Column="1" VerticalAlignment="Center" FontFamily="Trebuchet MS" 
-        FontWeight="Bold" FontSize="18" Foreground="#0066cc">
+        <Label Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Foreground="White">
+            Substat Ranking
+        </Label>
+
+        <Border Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Grid.RowSpan="5" BorderThickness="20" BorderBrush="GhostWhite">
+            <ScrollViewer VerticalScrollBarVisibility="Visible" Background="AliceBlue" Opacity=".2"
+                      VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </Border>
+
+        <Label Grid.Column="1" Grid.Row ="1" VerticalAlignment="Top" FontFamily="Trebuchet MS" FontWeight="Bold" FontSize="18" Foreground="White">
             Current Loadouts
         </Label>
 
-        <Border Grid.Column="0" Grid.Row="0" Height="35" Padding="5" Background="#4E87D4">
-            <Label VerticalAlignment="Center" Foreground="White">Characters</Label>
-        </Border>
+        <ScrollViewer VerticalScrollBarVisibility="Visible" Background="AliceBlue" Opacity=".2" Grid.Column="1" Grid.ColumnSpan="1" Grid.Row="2" Grid.RowSpan="5"
+                      VerticalAlignment="Center" HorizontalAlignment="Center"
+                      Margin="10,10,10,10"/>
     </Grid>
 </Page>
